; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hvc_beat.c_hvc_beat_put_chars.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hvc_beat.c_hvc_beat_put_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @hvc_beat_put_chars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hvc_beat_put_chars(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [2 x i64], align 16
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* %8, align 4
  br label %11

11:                                               ; preds = %37, %3
  %12 = load i32, i32* %8, align 4
  %13 = icmp sgt i32 %12, 0
  br i1 %13, label %14, label %41

14:                                               ; preds = %11
  %15 = load i32, i32* %8, align 4
  %16 = icmp sgt i32 %15, 16
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  br label %20

18:                                               ; preds = %14
  %19 = load i32, i32* %8, align 4
  br label %20

20:                                               ; preds = %18, %17
  %21 = phi i32 [ 16, %17 ], [ %19, %18 ]
  store i32 %21, i32* %9, align 4
  %22 = getelementptr inbounds [2 x i64], [2 x i64]* %7, i64 0, i64 0
  %23 = load i8*, i8** %5, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @memcpy(i64* %22, i8* %23, i32 %24)
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* %9, align 4
  %28 = getelementptr inbounds [2 x i64], [2 x i64]* %7, i64 0, i64 0
  %29 = load i64, i64* %28, align 16
  %30 = getelementptr inbounds [2 x i64], [2 x i64]* %7, i64 0, i64 1
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @beat_put_term_char(i32 %26, i32 %27, i64 %29, i64 %31)
  %33 = load i32, i32* %9, align 4
  %34 = load i8*, i8** %5, align 8
  %35 = sext i32 %33 to i64
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  store i8* %36, i8** %5, align 8
  br label %37

37:                                               ; preds = %20
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* %8, align 4
  %40 = sub nsw i32 %39, %38
  store i32 %40, i32* %8, align 4
  br label %11

41:                                               ; preds = %11
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local i32 @memcpy(i64*, i8*, i32) #1

declare dso_local i32 @beat_put_term_char(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
